--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="wrapper">
         <header class="header">
-          <div class="header__content _container">
+          <div class="header__content">
             <div class="header__menu menu">
               <div class="menu__icon icon-menu">
                 <span></span>
@@ -31,6 +31,7 @@
   
         </main>
       </div>
+      <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
       <script src="/js/script.js"></script>
 </body>
 </html>
