Переделал scss компилер, а также добавил разметку первого блока на главной странице

--- a/index.html
+++ b/index.html
@@ -28,10 +28,26 @@
           </div>
         </header>
         <main class="page">
-  
+            <div class="hi">
+                <div class="hi__container container">
+                    <div class="hi__content">
+                        <h1 class="hi__title title">
+                            Hi, I am John,
+                            Creative Technologist
+                        </h1>
+                        <div class="hi__text text">
+                            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                        </div>
+                        <a href="" class="hi__btn btn">Download Resume</a>
+                    </div>
+                    <div class="hi__ava">
+                        <img src="/img/ava.png" alt="">
+                    </div>
+                </div>
+            </div>
         </main>
-      </div>
-      <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-      <script src="/js/script.js"></script>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 </html>
