Сделал секцию постов

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
           </div>
         </header>
         <main class="page">
-            <div class="hi">
-                <div class="hi__container container">
+            <section class="hi">
+                <div class="hi__container _container">
                     <div class="hi__content">
                         <h1 class="hi__title title">
-                            Hi, I am John,
+                            Hi, I am John,<br>
                             Creative Technologist
                         </h1>
                         <div class="hi__text text">
@@ -45,7 +45,32 @@
                         <img src="/img/ava.png" alt="">
                     </div>
                 </div>
-            </div>
+            </section>
+            <section class="recent-posts">
+                <div class="recent-posts__container _container">
+                    <div class="recent-posts__header">
+                        <div class="recent-posts__title title-posts">Recent posts</div>
+                        <a href="" class="recent-posts__view-all">View all</a>
+                    </div>
+                    <div class="recent-posts__items">
+                        <div class="recent-posts__column">
+                           <article class="recent-posts__item recent-post">
+                            <a href="" class="recent-post__title">Creating pixel perfect icons in Figma</a>
+                            <div class="recent-post__info">12 Feb 2020 <span>|</span> Design, Pattern</div>
+                            <div class="recent-post__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
+                           </article> 
+                        </div>
+                        <div class="recent-posts__column">
+                            <article class="recent-posts__item recent-post">
+                             <a href="" class="recent-post__title">Making a design system from scratch</a>
+                             <div class="recent-post__info">12 Feb 2020 <span>|</span> Figma, Icon Design</div>
+                             <div class="recent-post__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
+                            </article> 
+                         </div>
+                    </div>
+                    
+                </div>
+            </section>
         </main>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
