Также переделал путь к картинке в html

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <a href="" class="hi__btn btn">Download Resume</a>
                     </div>
                     <div class="hi__ava">
-                        <img src="/img/ava.png" alt="">
+                        <img src="img/ava.png" alt="">
                     </div>
                 </div>
             </section>
