--- a/index.html
+++ b/index.html
@@ -74,6 +74,6 @@
         </main>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
