Доделал главную страницу

--- a/index.html
+++ b/index.html
@@ -72,7 +72,64 @@
                     </div>
                 </div>
             </section>
+            <section class="featured-works">
+                <div class="featured-works__container _container">
+                    <div class="featured-works__title title-posts">Featured works</div>
+                    <div class="works">
+                        <article class="works__item">
+                            <a href="" class="works__image _ibg">
+                                <img src="img/Featured works/Rectangle 30.png" alt="">
+                            </a>
+                            <div class="works__body">
+                                <div class="works__title">Designing Dashboards</div>
+                                <div class="works__info">
+                                    <div class="works__year year">2020</div>
+                                    <div class="works__category category">Dashboard</div>
+                                </div>
+                                <div class="works__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
+                            </div>
+                        </article>
+                        <article class="works__item">
+                            <a href="" class="works__image _ibg">
+                                <img src="img/Featured works/Rectangle 32.png" alt="">
+                            </a>
+                            <div class="works__body">
+                                <div class="works__title">Vibrant Portraits of 2020</div>
+                                <div class="works__info">
+                                    <div class="works__year year">2018</div>
+                                    <div class="works__category category">Illustration</div>
+                                </div>
+                                <div class="works__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
+                            </div>
+                        </article>
+                        <article class="works__item">
+                            <a href="" class="works__image _ibg">
+                                <img src="img/Featured works/Rectangle 34.png" alt="">
+                            </a>
+                            <div class="works__body">
+                                <div class="works__title">36 Days of Malayalam type</div>
+                                <div class="works__info">
+                                    <div class="works__year year">2018</div>
+                                    <div class="works__category category">Typography</div>
+                                </div>
+                                <div class="works__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+            </section>
         </main>
+        <footer class="footer">
+            <div class="footer__content _container">
+                <div class="footer__social social">
+                    <a href="" class="social__item"><img src="img/ico/fb.png" alt=""></a>
+                    <a href="" class="social__item"><img src="img/ico/insta.png" alt=""></a>
+                    <a href="" class="social__item"><img src="img/ico/twitter.png" alt=""></a>
+                    <a href="" class="social__item"><img src="img/ico/linkedin.png" alt=""></a>
+                </div>
+            </div>
+            <div class="footer__copy">Copyright ©2020 All rights reserved </div>
+        </footer>
     </div>
 </body>
 </html>
