--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <nav class="menu__body">
                 <ul class="menu__list">
                   <li><a href="" class="menu__link">Works</a></li>
-                  <li><a href="" class="menu__link">Blog</a></li>
+                  <li><a href="blog.html" class="menu__link">Blog</a></li>
                   <li><a href="" class="menu__link">Contact</a></li>
                 </ul>
               </nav>
