--- a/blog.html
+++ b/blog.html
@@ -22,7 +22,7 @@
               </div>
               <nav class="menu__body">
                 <ul class="menu__list">
-                  <li><a href="" class="menu__link">Works</a></li>
+                  <li><a href="works.html" class="menu__link">Works</a></li>
                   <li><a href="" class="menu__link _active">Blog</a></li>
                   <li><a href="" class="menu__link">Contact</a></li>
                 </ul>
