--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               </div>
               <nav class="menu__body">
                 <ul class="menu__list">
-                  <li><a href="" class="menu__link">Works</a></li>
+                  <li><a href="works.html" class="menu__link">Works</a></li>
                   <li><a href="blog.html" class="menu__link">Blog</a></li>
                   <li><a href="" class="menu__link">Contact</a></li>
                 </ul>
@@ -81,7 +81,7 @@
                                 <img src="img/Featured works/Rectangle 30.png" alt="">
                             </a>
                             <div class="works__body">
-                                <div class="works__title">Designing Dashboards</div>
+                                <a href="" class="works__title">Designing Dashboards</a>
                                 <div class="works__info">
                                     <div class="works__year year">2020</div>
                                     <div class="works__category category">Dashboard</div>
@@ -94,7 +94,7 @@
                                 <img src="img/Featured works/Rectangle 32.png" alt="">
                             </a>
                             <div class="works__body">
-                                <div class="works__title">Vibrant Portraits of 2020</div>
+                                <a href="" class="works__title">Vibrant Portraits of 2020</a>
                                 <div class="works__info">
                                     <div class="works__year year">2018</div>
                                     <div class="works__category category">Illustration</div>
@@ -107,7 +107,7 @@
                                 <img src="img/Featured works/Rectangle 34.png" alt="">
                             </a>
                             <div class="works__body">
-                                <div class="works__title">36 Days of Malayalam type</div>
+                                <a href="" class="works__title">36 Days of Malayalam type</a>
                                 <div class="works__info">
                                     <div class="works__year year">2018</div>
                                     <div class="works__category category">Typography</div>
