Закончил верстку) Ураааааgit add .git add .

--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
 <body>
     <div class="wrapper">
         <header class="header">
-          <div class="header__content">
-            <div class="header__menu menu">
-              <div class="menu__icon icon-menu">
-                <span></span>
-                <span></span>
-                <span></span>
+            <div class="header__content">
+              <div class="header__menu menu">
+                <div class="menu__icon icon-menu">
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                </div>
+                <nav class="menu__body">
+                  <ul class="menu__list">
+                      <li><a href="index.html" class="menu__link _active">Home Page</a></li>
+                      <li><a href="works.html" class="menu__link">Works</a></li>
+                      <li><a href="blog.html" class="menu__link">Blog</a></li>
+                  </ul>
+                </nav>
               </div>
-              <nav class="menu__body">
-                <ul class="menu__list">
-                  <li><a href="works.html" class="menu__link">Works</a></li>
-                  <li><a href="blog.html" class="menu__link">Blog</a></li>
-                  <li><a href="" class="menu__link">Contact</a></li>
-                </ul>
-              </nav>
             </div>
-          </div>
         </header>
         <main class="page">
             <section class="hi">
@@ -75,13 +75,13 @@
             <section class="featured-works">
                 <div class="featured-works__container _container">
                     <div class="featured-works__title title-posts">Featured works</div>
-                    <div class="works">
+                    <div class="featured-works__items works">
                         <article class="works__item">
-                            <a href="" class="works__image _ibg">
+                            <a href="article.html" class="works__image _ibg">
                                 <img src="img/Featured works/Rectangle 30.png" alt="">
                             </a>
                             <div class="works__body">
-                                <a href="" class="works__title">Designing Dashboards</a>
+                                <a href="article.html" class="works__title">Designing Dashboards</a>
                                 <div class="works__info">
                                     <div class="works__year year">2020</div>
                                     <div class="works__category category">Dashboard</div>
