--- a/blog.html
+++ b/blog.html
@@ -13,22 +13,22 @@
 <body>
     <div class="wrapper">
         <header class="header">
-          <div class="header__content">
-            <div class="header__menu menu">
-              <div class="menu__icon icon-menu">
-                <span></span>
-                <span></span>
-                <span></span>
+            <div class="header__content">
+              <div class="header__menu menu">
+                <div class="menu__icon icon-menu">
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                </div>
+                <nav class="menu__body">
+                  <ul class="menu__list">
+                      <li><a href="index.html" class="menu__link">Home Page</a></li>
+                      <li><a href="works.html" class="menu__link">Works</a></li>
+                      <li><a href="blog.html" class="menu__link _active">Blog</a></li>
+                  </ul>
+                </nav>
               </div>
-              <nav class="menu__body">
-                <ul class="menu__list">
-                  <li><a href="works.html" class="menu__link">Works</a></li>
-                  <li><a href="" class="menu__link _active">Blog</a></li>
-                  <li><a href="" class="menu__link">Contact</a></li>
-                </ul>
-              </nav>
             </div>
-          </div>
         </header>
         <main class="page">
                 <div class="blog page__container _container">
