--- a/works.html
+++ b/works.html
@@ -13,67 +13,71 @@
 <body>
     <div class="wrapper">
         <header class="header">
-          <div class="header__content">
-            <div class="header__menu menu">
-              <div class="menu__icon icon-menu">
-                <span></span>
-                <span></span>
-                <span></span>
+            <div class="header__content">
+              <div class="header__menu menu">
+                <div class="menu__icon icon-menu">
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                </div>
+                <nav class="menu__body">
+                  <ul class="menu__list">
+                      <li><a href="index.html" class="menu__link">Home Page</a></li>
+                      <li><a href="works.html" class="menu__link _active">Works</a></li>
+                      <li><a href="blog.html" class="menu__link">Blog</a></li>
+                  </ul>
+                </nav>
               </div>
-              <nav class="menu__body">
-                <ul class="menu__list">
-                  <li><a href="works.html" class="menu__link _active">Works</a></li>
-                  <li><a href="blog.html" class="menu__link">Blog</a></li>
-                  <li><a href="" class="menu__link">Contact</a></li>
-                </ul>
-              </nav>
             </div>
-          </div>
         </header>
         <main class="page">
-            <div class="works page__container _container">
-                <h1 class="works__main-title title">Work</h1>
-                <div class="works">
-                    <article class="works__item">
-                        <a href="" class="works__image _ibg">
-                            <img src="img/Featured works/Rectangle 30.png" alt="">
-                        </a>
-                        <div class="works__body">
-                            <a href="" class="works__title">Designing Dashboards</a>
-                            <div class="works__info">
-                                <div class="works__year year">2020</div>
-                                <div class="works__category category">Dashboard</div>
-                            </div>
-                            <div class="works__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
+            <div class="works-page__container _container">
+                <section class="featured-works">
+                    <div class="works__container _container">
+                        <h1 class="works__main-title">Work</h1>
+                        <div class="featured-works__items works">
+                            <article class="works__item">
+                                <a href="article.html" class="works__image _ibg">
+                                    <img src="img/Featured works/Rectangle 30.png" alt="">
+                                </a>
+                                <div class="works__body">
+                                    <a href="article.html" class="works__title">Designing Dashboards</a>
+                                    <div class="works__info">
+                                        <div class="works__year year">2020</div>
+                                        <div class="works__category category">Dashboard</div>
+                                    </div>
+                                    <div class="works__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
+                                </div>
+                            </article>
+                            <article class="works__item">
+                                <a href="" class="works__image _ibg">
+                                    <img src="img/Featured works/Rectangle 32.png" alt="">
+                                </a>
+                                <div class="works__body">
+                                    <a href="" class="works__title">Vibrant Portraits of 2020</a>
+                                    <div class="works__info">
+                                        <div class="works__year year">2018</div>
+                                        <div class="works__category category">Illustration</div>
+                                    </div>
+                                    <div class="works__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
+                                </div>
+                            </article>
+                            <article class="works__item">
+                                <a href="" class="works__image _ibg">
+                                    <img src="img/Featured works/Rectangle 34.png" alt="">
+                                </a>
+                                <div class="works__body">
+                                    <a href="" class="works__title">36 Days of Malayalam type</a>
+                                    <div class="works__info">
+                                        <div class="works__year year">2018</div>
+                                        <div class="works__category category">Typography</div>
+                                    </div>
+                                    <div class="works__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
+                                </div>
+                            </article>
                         </div>
-                    </article>
-                    <article class="works__item">
-                        <a href="" class="works__image _ibg">
-                            <img src="img/Featured works/Rectangle 32.png" alt="">
-                        </a>
-                        <div class="works__body">
-                            <a href="" class="works__title">Vibrant Portraits of 2020</a>
-                            <div class="works__info">
-                                <div class="works__year year">2018</div>
-                                <div class="works__category category">Illustration</div>
-                            </div>
-                            <div class="works__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
-                        </div>
-                    </article>
-                    <article class="works__item">
-                        <a href="" class="works__image _ibg">
-                            <img src="img/Featured works/Rectangle 34.png" alt="">
-                        </a>
-                        <div class="works__body">
-                            <a href="" class="works__title">36 Days of Malayalam type</a>
-                            <div class="works__info">
-                                <div class="works__year year">2018</div>
-                                <div class="works__category category">Typography</div>
-                            </div>
-                            <div class="works__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
-                        </div>
-                    </article>
-                </div>
+                    </div>
+                </section>
             </div>
         </main>
         <footer class="footer">
