Закончил со стилями страницы blog

--- a/blog.html
+++ b/blog.html
@@ -32,28 +32,28 @@
         </header>
         <main class="page">
                 <div class="blog page__container _container">
-                    <h1 class="blog__title title">Blog</h1>
+                    <h1 class="blog__main-title title">Blog</h1>
                     <div class="blog__items">
                         <div class="blog__item">
-                            <a href="" class="blog__title2">UI Interactions of the week</a>
+                            <a href="" class="blog__title">UI Interactions of the week</a>
                             <div class="blog__info">12 Feb 2019 <span>|</span> 
                                 <div class="blog__category">Express, Handlebars</div></div>
                             <div class="blog__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia <br> consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
                         </div>
                         <div class="blog__item">
-                            <a href="" class="blog__title2">UI Interactions of the week</a>
+                            <a href="" class="blog__title">UI Interactions of the week</a>
                             <div class="blog__info">12 Feb 2019 <span>|</span> 
                                 <div class="blog__category">Express, Handlebars</div></div>
                             <div class="blog__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia <br> consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
                         </div>
                         <div class="blog__item">
-                            <a href="" class="blog__title2">UI Interactions of the week</a>
+                            <a href="" class="blog__title">UI Interactions of the week</a>
                             <div class="blog__info">12 Feb 2019 <span>|</span> 
                                 <div class="blog__category">Express, Handlebars</div></div>
                             <div class="blog__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia <br> consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
                         </div>
                         <div class="blog__item">
-                            <a href="" class="blog__title2">UI Interactions of the week</a>
+                            <a href="" class="blog__title">UI Interactions of the week</a>
                             <div class="blog__info">12 Feb 2019 <span>|</span> 
                                 <div class="blog__category">Express, Handlebars</div></div>
                             <div class="blog__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia <br> consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
